# alembic-autogenerate-enums

./: .isort.cfg  LICENSE  README.md  alembic_autogenerate_enums.py  lint.sh  pyproject.toml  setup.py
.github/workflows/: test_migrate.yml
alembic_autogenerate_enums/: __init__.py
test-harness/: .isort.cfg  setup.py
test-harness/alembic/: env.py
test-harness/alembic/versions/: 2635ee8b59d5_deprecated_upgrade.py  773d67fb8a72_basic_init.py  f609280185f5_current_upgrade_path.py
test-harness/test_harness/: columns.py  database.py  enums.py  models.py
test-harness/test_harness/tests/: conftest.py  test_enums.py  test_generate_file.py  test_migrate.py
test-harness/test_harness/tests/fixtures/: __init__.py
test-harness/test_harness/tests/fixtures/alembic/: env.py  script.py.mako
test-harness/test_harness/tests/fixtures/alembic/versions/: 2635ee8b59d5_deprecated_upgrade.py  773d67fb8a72_basic_init.py  f609280185f5_current_upgrade_path.py
test-harness/tests/: conftest.py  test_migrate.py
