[tool.poetry]
name = "alembic-autogenerate-enums"
version = "0.1.0"
description = "Alembic hook that allows enums values to be upgraded and downgraded in migrations automatically"
license = "MIT"
readme = "README.md"
authors = ["Pierce Freeman <pierce@freeman.vc>", "David Wilson <dw@botanicus.net>"]
packages = [{include = "alembic_autogenerate_enums"}]

[tool.poetry.dependencies]
python = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
