[tool.poetry]
name = "alembic-autogenerate-enums"
version = "0.1.2"
description = "Alembic hook that allows enums values to be upgraded and downgraded in migrations automatically"
license = "MIT"
readme = "README.md"
authors = ["David Wilson <dw@botanicus.net>", "Pierce Freeman <pierce@freeman.vc>"]
packages = [{include = "alembic_autogenerate_enums"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
